# hackathon-backend

./: .env.example  .gitignore  AUTH_IMPLEMENTATION_SUMMARY.md  README.md  check_api_quota.py  nixpacks.toml  pyproject.toml  quick_test.py  requirements.txt  test_api.py  test_auth_endpoints.py  test_openai.py  test_rag.py
alembic/: env.py
alembic/versions/: a5574fbe41de_add_auth_tables_and_update_users.py
app/: main.py  models.py  schemas.py
app/api/: auth.py  chat.py  profile.py  translate.py
app/core/: config.py  dependencies.py  security.py
app/services/: auth_service.py  indexing_service.py  personalization_service.py  profile_service.py  rag_service.py  translation_service.py  user_service.py
